# email-summariser-agent

./: .gitignore  README.md  pyproject.toml
config/: settings.py
src/: email_client.py  main.py  scheduler.py  summarizer.py
